--- a/Calculadora/U_Calculadora.fmx
+++ b/Calculadora/U_Calculadora.fmx
@@ -2,33 +2,34 @@ object frm_calculadora: Tfrm_calculadora
   Left = 0
   Top = 0
   Caption = 'Calculadora'
-  ClientHeight = 279
-  ClientWidth = 250
+  ClientHeight = 338
+  ClientWidth = 269
   Position = ScreenCenter
   FormFactor.Width = 320
   FormFactor.Height = 480
   FormFactor.Devices = [Desktop]
   DesignerMasterStyle = 0
   object caixa_botoes: TLayout
-    Position.X = -239.000000000000000000
-    Position.Y = -142.000000000000000000
-    Size.Width = 505.000000000000000000
+    Position.X = -231.000000000000000000
+    Position.Y = -110.000000000000000000
+    Size.Width = 544.000000000000000000
     Size.Height = 442.000000000000000000
     Size.PlatformDefault = False
     TabOrder = 1
     object btn_0: TButton
       Position.X = 310.000000000000000000
-      Position.Y = 368.000000000000000000
+      Position.Y = 394.000000000000000000
       Size.Width = 50.000000000000000000
       Size.Height = 40.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 0
       Text = '0'
       TextSettings.Trimming = None
+      OnClick = btn_0Click
     end
     object btn_1: TButton
       Position.X = 252.000000000000000000
-      Position.Y = 320.000000000000000000
+      Position.Y = 346.000000000000000000
       Size.Width = 50.000000000000000000
       Size.Height = 40.000000000000000000
       Size.PlatformDefault = False
@@ -39,7 +40,7 @@ object frm_calculadora: Tfrm_calculadora
     end
     object btn_2: TButton
       Position.X = 310.000000000000000000
-      Position.Y = 320.000000000000000000
+      Position.Y = 346.000000000000000000
       Size.Width = 50.000000000000000000
       Size.Height = 40.000000000000000000
       Size.PlatformDefault = False
@@ -50,7 +51,7 @@ object frm_calculadora: Tfrm_calculadora
     end
     object btn_3: TButton
       Position.X = 368.000000000000000000
-      Position.Y = 320.000000000000000000
+      Position.Y = 346.000000000000000000
       Size.Width = 50.000000000000000000
       Size.Height = 40.000000000000000000
       Size.PlatformDefault = False
@@ -61,7 +62,7 @@ object frm_calculadora: Tfrm_calculadora
     end
     object btn_4: TButton
       Position.X = 252.000000000000000000
-      Position.Y = 272.000000000000000000
+      Position.Y = 298.000000000000000000
       Size.Width = 50.000000000000000000
       Size.Height = 40.000000000000000000
       Size.PlatformDefault = False
@@ -72,7 +73,7 @@ object frm_calculadora: Tfrm_calculadora
     end
     object btn_5: TButton
       Position.X = 310.000000000000000000
-      Position.Y = 272.000000000000000000
+      Position.Y = 298.000000000000000000
       Size.Width = 50.000000000000000000
       Size.Height = 40.000000000000000000
       Size.PlatformDefault = False
@@ -83,7 +84,7 @@ object frm_calculadora: Tfrm_calculadora
     end
     object btn_6: TButton
       Position.X = 368.000000000000000000
-      Position.Y = 272.000000000000000000
+      Position.Y = 298.000000000000000000
       Size.Width = 50.000000000000000000
       Size.Height = 40.000000000000000000
       Size.PlatformDefault = False
@@ -94,7 +95,7 @@ object frm_calculadora: Tfrm_calculadora
     end
     object btn_7: TButton
       Position.X = 252.000000000000000000
-      Position.Y = 224.000000000000000000
+      Position.Y = 250.000000000000000000
       Size.Width = 50.000000000000000000
       Size.Height = 40.000000000000000000
       Size.PlatformDefault = False
@@ -105,7 +106,7 @@ object frm_calculadora: Tfrm_calculadora
     end
     object btn_8: TButton
       Position.X = 310.000000000000000000
-      Position.Y = 224.000000000000000000
+      Position.Y = 250.000000000000000000
       Size.Width = 50.000000000000000000
       Size.Height = 40.000000000000000000
       Size.PlatformDefault = False
@@ -116,7 +117,7 @@ object frm_calculadora: Tfrm_calculadora
     end
     object btn_9: TButton
       Position.X = 368.000000000000000000
-      Position.Y = 224.000000000000000000
+      Position.Y = 250.000000000000000000
       Size.Width = 50.000000000000000000
       Size.Height = 40.000000000000000000
       Size.PlatformDefault = False
@@ -127,18 +128,18 @@ object frm_calculadora: Tfrm_calculadora
     end
     object btn_dividir: TButton
       Position.X = 426.000000000000000000
-      Position.Y = 368.000000000000000000
+      Position.Y = 202.000000000000000000
       Size.Width = 50.000000000000000000
       Size.Height = 40.000000000000000000
       Size.PlatformDefault = False
-      TabOrder = 16
+      TabOrder = 17
       Text = '/'
       TextSettings.Trimming = None
       OnClick = btn_dividirClick
     end
     object btn_igual: TButton
-      Position.X = 368.000000000000000000
-      Position.Y = 368.000000000000000000
+      Position.X = 426.000000000000000000
+      Position.Y = 394.000000000000000000
       Size.Width = 50.000000000000000000
       Size.Height = 40.000000000000000000
       Size.PlatformDefault = False
@@ -149,7 +150,7 @@ object frm_calculadora: Tfrm_calculadora
     end
     object btn_multiplicar: TButton
       Position.X = 426.000000000000000000
-      Position.Y = 320.000000000000000000
+      Position.Y = 250.000000000000000000
       Size.Width = 50.000000000000000000
       Size.Height = 40.000000000000000000
       Size.PlatformDefault = False
@@ -160,17 +161,18 @@ object frm_calculadora: Tfrm_calculadora
     end
     object btn_ponto: TButton
       Position.X = 252.000000000000000000
-      Position.Y = 368.000000000000000000
+      Position.Y = 394.000000000000000000
       Size.Width = 50.000000000000000000
       Size.Height = 40.000000000000000000
       Size.PlatformDefault = False
       TabOrder = 12
       Text = '.'
       TextSettings.Trimming = None
+      OnClick = btn_pontoClick
     end
     object btn_somar: TButton
       Position.X = 426.000000000000000000
-      Position.Y = 272.000000000000000000
+      Position.Y = 346.000000000000000000
       Size.Width = 50.000000000000000000
       Size.Height = 40.000000000000000000
       Size.PlatformDefault = False
@@ -181,7 +183,7 @@ object frm_calculadora: Tfrm_calculadora
     end
     object btn_subtrair: TButton
       Position.X = 426.000000000000000000
-      Position.Y = 224.000000000000000000
+      Position.Y = 298.000000000000000000
       Size.Width = 50.000000000000000000
       Size.Height = 40.000000000000000000
       Size.PlatformDefault = False
@@ -191,27 +193,27 @@ object frm_calculadora: Tfrm_calculadora
       OnClick = btn_subtrairClick
     end
     object caixa_topo: TLayout
-      Position.X = 239.000000000000000000
-      Position.Y = 120.000000000000000000
-      Size.Width = 250.000000000000000000
+      Position.X = 231.000000000000000000
+      Position.Y = 110.000000000000000000
+      Size.Width = 272.000000000000000000
       Size.Height = 96.000000000000000000
       Size.PlatformDefault = False
-      TabOrder = 17
+      TabOrder = 18
       object lb_operador: TLabel
         StyledSettings = [Family, Style, FontColor]
-        Position.X = 71.000000000000000000
+        Position.X = 95.000000000000000000
         Position.Y = 40.000000000000000000
         Size.Width = 18.000000000000000000
         Size.Height = 41.000000000000000000
         Size.PlatformDefault = False
-        TextSettings.Font.Size = 30.000000000000000000
+        TextSettings.Font.Size = 18.000000000000000000
         TextSettings.HorzAlign = Center
         Text = '.'
-        TabOrder = 2
+        TabOrder = 1
       end
       object lb_igual: TLabel
         StyledSettings = [Family, Style, FontColor]
-        Position.X = 155.000000000000000000
+        Position.X = 187.000000000000000000
         Position.Y = 40.000000000000000000
         Size.Width = 22.000000000000000000
         Size.Height = 41.000000000000000000
@@ -219,42 +221,84 @@ object frm_calculadora: Tfrm_calculadora
         TextSettings.Font.Size = 30.000000000000000000
         TextSettings.HorzAlign = Center
         Text = '='
-        TabOrder = 1
-      end
-      object txt_resultado: TEdit
-        Touch.InteractiveGestures = [LongTap, DoubleTap]
         TabOrder = 0
-        ReadOnly = True
-        Position.X = 185.000000000000000000
-        Position.Y = 40.000000000000000000
-        Size.Width = 50.000000000000000000
-        Size.Height = 41.000000000000000000
-        Size.PlatformDefault = False
       end
       object lb_numero1: TLabel
         StyledSettings = [Family, Style, FontColor]
-        Position.X = 13.000000000000000000
+        Position.X = 8.000000000000000000
         Position.Y = 40.000000000000000000
-        Size.Width = 50.000000000000000000
+        Size.Width = 55.000000000000000000
         Size.Height = 41.000000000000000000
         Size.PlatformDefault = False
         TextSettings.Font.Size = 18.000000000000000000
         TextSettings.HorzAlign = Center
-        Text = '0'
-        TabOrder = 3
+        TabOrder = 2
       end
       object lb_numero2: TLabel
         StyledSettings = [Family, Style, FontColor]
-        Position.X = 97.000000000000000000
+        Position.X = 129.000000000000000000
         Position.Y = 40.000000000000000000
         Size.Width = 50.000000000000000000
         Size.Height = 41.000000000000000000
         Size.PlatformDefault = False
         TextSettings.Font.Size = 18.000000000000000000
         TextSettings.HorzAlign = Center
-        Text = '0'
-        TabOrder = 4
+        TabOrder = 3
       end
+    end
+    object btn_apagar: TButton
+      Position.X = 368.000000000000000000
+      Position.Y = 394.000000000000000000
+      Size.Width = 50.000000000000000000
+      Size.Height = 40.000000000000000000
+      Size.PlatformDefault = False
+      TabOrder = 19
+      Text = #8592
+      TextSettings.Trimming = None
+      OnClick = btn_apagarClick
+    end
+    object btn_limpar: TButton
+      Position.X = 310.000000000000000000
+      Position.Y = 202.000000000000000000
+      Size.Width = 50.000000000000000000
+      Size.Height = 40.000000000000000000
+      Size.PlatformDefault = False
+      TabOrder = 20
+      Text = 'CE'
+      TextSettings.Trimming = None
+      OnClick = btn_limparClick
+    end
+    object lb_resultado: TLabel
+      StyledSettings = [Family, Style, FontColor]
+      Position.X = 448.000000000000000000
+      Position.Y = 150.000000000000000000
+      Size.Width = 74.000000000000000000
+      Size.Height = 41.000000000000000000
+      Size.PlatformDefault = False
+      TextSettings.Font.Size = 18.000000000000000000
+      TabOrder = 21
+    end
+    object btn_c: TButton
+      Position.X = 368.000000000000000000
+      Position.Y = 202.000000000000000000
+      Size.Width = 50.000000000000000000
+      Size.Height = 40.000000000000000000
+      Size.PlatformDefault = False
+      TabOrder = 22
+      Text = 'C'
+      TextSettings.Trimming = None
+      OnClick = btn_cClick
+    end
+    object btn_porcentagem: TButton
+      Position.X = 252.000000000000000000
+      Position.Y = 202.000000000000000000
+      Size.Width = 50.000000000000000000
+      Size.Height = 40.000000000000000000
+      Size.PlatformDefault = False
+      TabOrder = 16
+      Text = '%'
+      TextSettings.Trimming = None
+      OnClick = btn_porcentagemClick
     end
   end
 end
